# python-example

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/app/: azure_clients.py  config.py  logging.py  main.py  middleware.py
src/app/routes/: azure.py  health.py  items.py
tests/: conftest.py  test_azure.py  test_health.py  test_items.py
