[project]
name = "fastapi-aks-boilerplate"
version = "0.1.0"
description = "FastAPI boilerplate for AKS with Azure Workload Identity"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "azure-identity>=1.21,<2.0",
    "azure-keyvault-secrets>=4.9,<5.0",
    "azure-storage-blob>=12.24,<13.0",
    "structlog>=25.1,<26.0",
    "aiohttp>=3.11,<4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
